--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-3.57MB/s(Youtube:不良林), server: cu-cs.okvpn.xyz, port: 20009, type: trojan, password: 2c100ffe-4f52-4133-8c5c-d053fed7b270, sni: cu-cs.okvpn.xyz, skip-cert-verify: true}
-  - {name: 🇩🇪 德国-1.33MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 未知国家-1.86MB/s(Youtube:不良林), server: v1.ssrsub.com, port: 8443, type: vmess, uuid: 2256dea6-b952-43f7-b8a2-983f766d5836, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v1.ssrsub.com}}
-  - {name: 🇷🇺 俄罗斯联邦-1.33MB/s(Youtube:不良林), server: v2.ssrsub.com, port: 18443, type: vmess, uuid: 2256dea6-b952-43f7-b8a2-983f766d5836, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v2.ssrsub.com}}
-  - {name: 🇨🇳 中国-236.4KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
   - {name: 🇨🇳 中国-1.25MB/s(Youtube:不良林), server: gy.ziqiyun.xyz, port: 41354, type: ss, cipher: chacha20-ietf-poly1305, password: 297545c2-a59d-4610-9580-a7baa3657a57}
-  - {name: 🇺🇸 美国-372.9KB/s(Youtube:不良林), server: au2-4.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-4.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-7.04MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.72MB/s(Youtube:不良林), server: 212.81.47.16, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
   - {name: 🇨🇳 中国-410.5KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇨🇳 中国-822.2KB/s(Youtube:不良林), server: 120.233.187.199, port: 20014, type: trojan, password: 079db44d-72e6-3ed1-bd9a-f870c19c15cb, skip-cert-verify: true}
   - {name: 🇺🇸 美国-3.16MB/s(Youtube:不良林), server: 212.81.47.15, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
   - {name: 🇺🇸 美国-1.28MB/s(Youtube:不良林), server: 212.81.47.18, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-360.1KB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇺🇸 美国-800.9KB/s(Youtube:不良林), server: 212.81.47.14, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.21MB/s(Youtube:不良林), server: 185.167.116.250, port: 9061, type: ss, cipher: aes-256-cfb, password: 4R3hUfZ2FHhDmNcP}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.57MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.33MB/s(Youtube:不良林)
-      - 未知国家-1.86MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-236.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-372.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-7.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
       - 🇨🇳 中国-410.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-822.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-360.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-800.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.21MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-3.57MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.33MB/s(Youtube:不良林)
-      - 未知国家-1.86MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-236.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-372.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-7.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
       - 🇨🇳 中国-410.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-822.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-360.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-800.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.21MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.57MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.33MB/s(Youtube:不良林)
-      - 未知国家-1.86MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-236.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-372.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-7.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
       - 🇨🇳 中国-410.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-822.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-360.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-800.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.21MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-3.57MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.33MB/s(Youtube:不良林)
-      - 未知国家-1.86MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-236.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-372.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-7.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
       - 🇨🇳 中国-410.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-822.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-360.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-800.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.21MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.57MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.33MB/s(Youtube:不良林)
-      - 未知国家-1.86MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-236.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-372.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-7.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
       - 🇨🇳 中国-410.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-822.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-360.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-800.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.21MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-3.57MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.33MB/s(Youtube:不良林)
-      - 未知国家-1.86MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-236.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-372.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-7.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
       - 🇨🇳 中国-410.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-822.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-360.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-800.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.21MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-3.57MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.33MB/s(Youtube:不良林)
-      - 未知国家-1.86MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-236.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-372.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-7.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
       - 🇨🇳 中国-410.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-822.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-360.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-800.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.21MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
